<resources>
    <string name="app_name">知乎日报</string>
    <string name="app_about">关于</string>

    <!-- main -->
    <string name="click_login">点击头像进行登录</string>
    <string name="my_favorite">我的收藏</string>
    <string name="set">选项设置</string>
    <!-- login -->
    <string name="register">注册</string>
    <string name="register_now"><u>马上去注册(≖ ‿ ≖)✧</u></string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="register_login">请输入用户名</string>
    <string name="register_password">请设置密码</string>
    <string name="login_hint_account">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <!-- set -->
    <string name="set_title">设置</string>
    <string name="set_basic">基本设置</string>
    <string name="set_account">账户设置</string>
    <string name="set_help">关于与帮助</string>
    <string name="set_clean_cache">清除缓存</string>
    <string name="set_change_theme">夜间模式</string>
    <string name="set_change_pwd">修改密码</string>
    <string name="set_check_update">检查更新</string>
    <string name="set_about">关于</string>
    <string name="set_feedback">反馈</string>

    <!-- menu -->
    <string name="action_share">分享</string>
    <string name="action_set">设置</string>

    <!-- 收藏 -->
    <string name="favorite_list">收藏列表</string>
    <string name="favorite_choose_category">选择或新建收藏分类</string>


    <string name="sure">确定</string>
    <string name="download">下载</string>
    <string name="downloading">下载中...</string>
    <string name="logout">退出登录</string>

</resources>
