<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xiaolei.sun.zhihu_daily.ui.login.LoginActivity">

    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="120dp"
        android:background="@null"
        android:cursorVisible="false"
        android:gravity="center_vertical"
        android:hint="@string/register_login"
        android:inputType="phone"
        android:paddingLeft="5dp"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@null"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:cursorVisible="false"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@null"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_edittext"
        android:foreground="@drawable/card_foreground"
        android:text="@string/login"
        android:textColor="@color/text_white" />

    <TextView
        android:id="@+id/btn_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/register" />

</LinearLayout>
