<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteBg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <!-- basic -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/set_basic"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_clean_cache"
        android:textColor="@color/text_primary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_secondary" />

    <!-- account -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/set_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_change_pwd"
        android:textColor="@color/text_primary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_secondary" />

    <!-- help -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/set_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_check_update"
        android:textColor="@color/text_primary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_secondary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_about"
        android:textColor="@color/text_primary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_secondary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_feedback"
        android:textColor="@color/text_primary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_secondary" />

</LinearLayout>
