<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_day"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDay"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <!-- basic -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/set_basic"
            android:textColor="@color/colorPrimaryDarkDay"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_setting_clean_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:paddingLeft="20dp"
            android:text="@string/set_clean_cache"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_setting_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:paddingRight="20dp"
            android:text="2MB"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="15dp"
        android:background="@color/text_secondary_day" />

    <RelativeLayout
        android:id="@+id/layout_setting_change_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_setting_change_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:paddingLeft="20dp"
            android:text="@string/set_change_theme"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/switch_setting_change_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="15dp"
        android:background="@color/text_secondary_day" />

    <!-- account -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/set_account"
            android:textColor="@color/colorPrimaryDarkDay"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_setting_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_change_pwd"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="15dp"
        android:background="@color/text_secondary_day" />

    <!-- help -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/set_help"
            android:textColor="@color/colorPrimaryDarkDay"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_setting_check_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_setting_check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:paddingLeft="20dp"
            android:text="@string/set_check_update"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_setting_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:paddingRight="20dp"
            android:textSize="14sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="15dp"
        android:background="@color/text_secondary_day" />

    <TextView
        android:id="@+id/tv_setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_about"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="15dp"
        android:background="@color/text_secondary_day" />

    <TextView
        android:id="@+id/tv_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:paddingLeft="20dp"
        android:text="@string/set_feedback"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="15dp"
        android:background="@color/text_secondary_day" />

    <RelativeLayout
        android:id="@+id/rl_setting_logout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_setting_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/logout"
            android:textColor="@color/colorPrimaryDarkDay"
            android:textSize="20sp" />

        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/tv_setting_logout"
            android:background="@color/colorPrimaryDarkDay" />

        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/tv_setting_logout"
            android:background="@color/colorPrimaryDarkDay" />

    </RelativeLayout>

</LinearLayout>
